# moono

./: Anchor.toml  README.md
programs/mock-pump-fun/: Cargo.toml
programs/mock-pump-fun/src/: lib.rs
programs/moono/: Cargo.toml
programs/moono/src/: errors.rs  lib.rs  state.rs  utils.rs
programs/moono/src/instructions/: borrow_from_ticks.rs  deposit_to_tick.rs  execute_launch_pump_fun.rs  fund_loan_from_ticks.rs  initialize_asset_pool.rs  initialize_borrow_position.rs  initialize_borrow_slice_position.rs  initialize_execution_strategy_config.rs  initialize_protocol.rs  initialize_tick_page.rs  mock_deposit_to_tick.rs  mod.rs  open_fund_execute_launch_pump_fun.rs  open_loan.rs  ping.rs  set_asset_pool_flags.rs  set_execution_strategy_config.rs  withdraw_from_tick.rs
scripts/: deploy_devnet.sh  deploy_mainnet.sh  devnet_pump_fun_direct_create_v2.mjs  devnet_pump_fun_smoke.mjs  read_pump_global.mjs  test.sh  tests.sh
tests/: moono.ts
